--- a/app/src/main/res/layout/receipt_fragment.xml
+++ b/app/src/main/res/layout/receipt_fragment.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/receipt_layout_fragment"
     android:background="@color/color_f8"
     tools:context=".tabs.fragments.ReceiptFragment">
 
